@@ -47,7 +47,11 @@ class SettingController extends Controller
         else if ( ! AuthUser::hasPermission('administrator'))
         {
             Flash::set('error', __('You do not have permission to access the requested page!'));
-            redirect(get_url());
+
+            if (Setting::get('default_tab') === 'setting')
+                redirect(get_url('page'));
+            else
+                redirect(get_url());
         }
         
         $this->setLayout('backend');
